--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -1,31 +1,24 @@
-<!DOCTYPE html>
-<html lang="ko">
+<html lang="en">
     <head>
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css">
-         <tltie>서울시 보안관</tltie>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>로그인페이지</title>
+        <link rel="stylesheet" href="/static/css/pysta_style.css">
+        
     </head>
-    <body class="text-center">
-        <div id="container">
-            <div id="loginBox">
-                <!-- 로그인 페이지 타이틀 -->
-                <div id="loginBoxTitle">어서오세요</div>
-                <!-- <div id="inputBox">
-                    <div class="input-form-box"><span>아이디 </span><input type="text" name="uid" class="form-control"></div>
-                    <div class="input-form-box"><span>비밀번호 </span><input type="password" name="upw" class="form-control"></div>
-                    <div class="button-login-box" >
-                      <button type="button" class="btn btn-primary btn-xs" style="width:50%">로그인</button>
-                    </div>
-                  </div> -->
-                    <div id="login">
-                    <form method="POST">
-                        <h3>로그인</h3>
-                        {% csrf_token %}
-                        {{ form.as_p }}
-                        <button type="submit" class="btn btn-login">확인</button>
-                    </form>                                      
-                </div>
-            </div>
+    <body>
+        <div id = "login">
+            <form method="POST">
+                <h2>로그인</h1>
+                {% csrf_token %}
+                {{ form.as_p}}
+                <button tytpe="submit" class="btn btn-login">로그인</button>
+                <p>
+                    <a href="/users/signup/">회원가입</a>
+                </p>
+            </form>    
         </div>
+
     </body>
 </html>
 
