--- a/users/templates/signup.html
+++ b/users/templates/signup.html
@@ -1,4 +1,11 @@
-
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>게시글 상세</title>
+        <link rel="stylesheet" href="/static/css/pysta_style.css">
+    </head>
 <div id="signup">
     <form method="POST" enctype="multipart/form-data">
         <h1>회원가입</h1>
